# chora-store

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.chora/: session_state.json
.github/workflows/: neon-branch.yml  test.yml
litestream/: README.md  litestream-local.yml  litestream.yml.template
scripts/: migrate.py
src/chora_store/: __init__.py  agent.py  backup.py  cli.py  cloud_cli.py  cloud_client.py  coherence.py  conflict.py  distillation.py  embeddings.py  encrypted_repository.py  evaluator.py  factory.py  focus.py  mcp.py  metabolism.py  models.py  observer.py  physics.py  preprocessing.py  repository.py  schema.py  search.py  syncable_repository.py  vitality.py
tests/: __init__.py  conftest.py  test_backend_parity.py  test_cloud_client.py  test_conflict.py  test_encrypted_repository.py  test_epigenetic.py  test_epigenetic_e2e.py  test_factory.py  test_observer.py  test_physics_triggers.py  test_repository.py  test_syncable_repository.py
tests/features/: agent_awareness.feature  autoevolution_e2e.feature  autonomous_reification.feature  behavioral_stability_gate.feature  capability_system.feature  coordination_turn.feature  cron_hooks.feature  cross_domain_pollination.feature  distillation.feature  epigenetic_system.feature  factory_governance.feature  focus_coordination.feature  focus_create.feature  inherit_phase.feature  inquiry_and_discovery.feature  learning_system.feature  metabolic_activation.feature  perturbation_experiments.feature  quality_gate.feature  release_lifecycle.feature  route_crystallization.feature  (+5 more)
(+52 files in other folders)
