[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chora-store"
version = "0.1.0"
description = "Canonical Tensegrity Physics Engine (v4.0)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "pyyaml"
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary,pool]>=3.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "chora-store[postgres,test]",
]

[project.scripts]
chora = "chora_store.mcp:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
